--- a/main.css
+++ b/main.css
@@ -1,15 +1,26 @@
 /*navbar style*/
+.navbar-inverse .navbar-toggle {
+    background-color:#141414;
+}
+.container-fluid {
+    border-bottom:2px solid #141414;
+}
 li {
     padding-left:40px;
     padding-right:40px;   
 }
 .navbar-inverse .navbar-nav>li>a {
-    color:white;
+    color:#141414;
     font-family:calibri;
     font-size:20px;
+    transition: transform .2s;
+    padding-left: 15px;
+    padding-right: 15px;
+    letter-spacing: 2px;
 }
 .navbar-inverse .navbar-nav>li>a:hover{
     color:#b3b3b3;
+    transform: scale(1.5);
 }
 .navbar .navbar-nav {
     display: inline-block;
@@ -21,9 +32,8 @@ li {
     text-align: center;
   }
 .navbar-inverse {
-    background-color:#141414;
-    border-color:#141414;
-    opacity:.8;
+    background-color:white;
+    border-color:white;
 }
 .navbar {
     margin-bottom:0px;
@@ -32,12 +42,14 @@ li:hover {
     cursor: pointer;
 }
 .navbar-brand {
-    border:1px solid white;
+    border:1px solid #141414;
     border-radius: 50%;
-    color:white;
+    color:#01feec !important;
+    letter-spacing:2px;
+    text-shadow: 2px 2px #141414;
 }
 .navbar-brand:hover {
-    color:#b3b3b3;
+    color:#b3b3b3 !important;
 }
 /*header style*/
 header {
@@ -46,64 +58,55 @@ header {
     overflow: hidden;
   }
   
-  .header__bg {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    max-width: 100%;
-    height: 100%;
-    transform: skewY(-6deg);
-    transform-origin: top left;
-    background-image: linear-gradient(to bottom,#66fcf1, #141414);
-  }
-  
-  h1, h2 {
+ span, h2 {
     margin: 0;
-    padding-top: 55px;
     font: 30px "Arial";
     text-align: center;
+    letter-spacing:3px;
   }
   
-  header h1, header h2 {
+ header h2 {
     position: relative;
-    color: white;
+    color:#141414;
+  }
+  
+  .first-letter {
+    color: #01feec;
+    padding-left:5px;
+    font-size:40px;
+    text-shadow:2px 2px #141414;
+  }
+  .name {
+      text-align:center;
+      padding-top:40px;
+  }
+  .hr {
+      width:50%;
+      margin-right:auto;
+      margin-left:auto;
   }
 /*Content Style*/
+.parallax {
+    background-image: url("capture.png");
+    min-height: 300px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 * {
     box-sizing: border-box;
   }
   
-  /* Create two equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: auto;
-    background-color:white !important; 
-    border:2px solid #141414;
-    border-radius:5%;
-}
-  .row {
-      max-width:100%;
-      margin-right:0px;
-      margin-left:0px;
-      padding-top:20px;
-      padding-bottom:40px;
-  }
   .images {
       max-width: 100%;
       height:auto;
   }
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+ 
   /*My Skills*/
-  
+  .w3-color {
+      background-color:#01feec;
+  }
   .contain {
       max-width:100%;
       padding-left:20px;
@@ -115,29 +118,42 @@ header {
 
 /*Footer Style*/
 .footer {
-
-    background-color:#66fcf1;
+    padding-top:20px;
+    background-color:#141414;
     max-width:100%;
-    height:100px;
+    height:200px;
     bottom:0;
-    background-image: linear-gradient(#b3b3b3, #141414);
+    letter-spacing:1.5px;
 }
-.footerTitle {
-    text-align:center;
-    font-size: 20px;
-    color:white;
-    font-weight:bold;
-    font-family: amsi pro;
-}
+
 .nameTitle {
     color:white;
     font-family: calibri;
     text-align:center;
+    font-size:20px;
 }
 .socialMedia {
     color:white;
     text-align:center;
     text-decoration:none;
+}
+.btmLinks {
+    font-size:20px;
+    font-family:calibri;
+    border-right: 2px solid white;
+    padding:5px;
+}
+.btmLink {
+    font-size:20px;
+    font-family:calibri;
+}
+.btmLink:hover {
+    text-decoration:none;
+    color:#b3b3b3;
+}
+.btmLinks:hover {
+    text-decoration:none;
+    color:#b3b3b3;
 }
 .fa {
     color:white;
@@ -146,16 +162,25 @@ header {
 .contactInfo {
     text-align:center;
     font-family:calibri;
+    font-size:20px;
 }
 .fa-linkedin{ 
     padding:5px;
-    border:1px solid white;
-    font-size:20px
+    font-size:30px !important;
+    padding-top:30px;
+}
+.fa-linkedin:hover{
+    text-decoration:none;
+    color:#b3b3b3;
+}
+.fa-facebook:hover {
+    text-decoration:none;
+    color:#b3b3b3;
 }
 .fa-facebook{
     padding:5px;
-    border:1px solid white;
-    font-size:20px;
+    font-size:30px !important;
+    padding-top:30px;
 }
 .fa-linkedin:hover{
     color:#b3b3b3;
