--- a/main.css
+++ b/main.css
@@ -117,7 +117,18 @@ header {
  .glyphicon {
      font-size: 20px;
  }
- 
+ .aboutMe {
+     text-align:center;
+     margin-right:auto;
+     margin-left:auto;
+     max-width:700px;
+ }
+ h5 {
+     line-height:1.5;
+ }
+ .head {
+     height:200px;
+ }
   /*My Skills*/
   .contact {
       text-align:center;
