--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ li:hover {
 /*header style*/
 header {
     position: relative;
-    height: 300px;
+    height: 350px;
     overflow: hidden;
   }
   
@@ -89,6 +89,7 @@ header {
       font-family: Arial;
       text-align:center;
       line-height:1.5;
+      font-size:14px;
   }
   pre {
       text-align: center;
