--- a/main.css
+++ b/main.css
@@ -1,268 +1,317 @@
 /*navbar style*/
 .navbar-inverse .navbar-toggle {
-    background-color:#141414;
+    background-color: #141414;
 }
+
 .container-fluid {
-    border-bottom:2px solid #141414;
+    border-bottom: 2px solid #141414;
 }
+
 li {
-    padding-left:40px;
-    padding-right:40px;   
+    padding-left: 40px;
+    padding-right: 40px;
 }
+
 .navbar-inverse .navbar-nav>li>a {
-    color:#141414;
-    font-family:calibri;
-    font-size:20px;
+    color: #141414;
+    font-family: calibri;
+    font-size: 20px;
     transition: transform .2s;
     padding-left: 15px;
     padding-right: 15px;
     letter-spacing: 2px;
 }
-.navbar-inverse .navbar-nav>li>a:hover{
-    color:#b3b3b3;
+
+.navbar-inverse .navbar-nav>li>a:hover {
+    color: #b3b3b3;
     transform: scale(1.5);
 }
+
 .navbar .navbar-nav {
     display: inline-block;
     float: none;
     vertical-align: top;
-  }
-  
-  .navbar .navbar-collapse {
+}
+
+.navbar .navbar-collapse {
     text-align: center;
-  }
+}
+
 .navbar-inverse {
-    background-color:white;
-    border-color:white;
+    background-color: white;
+    border-color: white;
 }
+
 .navbar {
-    margin-bottom:0px;
+    margin-bottom: 0px;
 }
+
 li:hover {
     cursor: pointer;
 }
+
 .navbar-brand {
-    border:1px solid #141414;
+    border: 1px solid #141414;
     border-radius: 50%;
-    color:#01feec !important;
-    letter-spacing:2px;
+    color: #01feec !important;
+    letter-spacing: 2px;
     text-shadow: 2px 2px #141414;
 }
+
 .navbar-brand:hover {
-    color:#b3b3b3 !important;
+    color: #b3b3b3 !important;
 }
+
 /*header style*/
 header {
     position: relative;
     height: 350px;
     overflow: hidden;
-  }
-  
- span, h2 {
+}
+
+span,
+h2 {
     margin: 0;
     font: 30px "Arial";
     text-align: center;
-    letter-spacing:3px;
-  }
-  
- header h2 {
+    letter-spacing: 3px;
+}
+
+header h2 {
     position: relative;
-    color:#141414;
-  }
-  
-  .first-letter {
+    color: #141414;
+}
+
+.first-letter {
     color: #01feec;
-    padding-left:5px;
-    font-size:40px;
-    text-shadow:2px 2px #141414;
-  }
-  .name {
-      text-align:center;
-      padding-top:40px;
-  }
-  .hr {
-      width:50%;
-      margin-right:auto;
-      margin-left:auto;
-  }
-  h4 {
-      font-family: Arial;
-      text-align:center;
-      line-height:1.5;
-      font-size:14px;
-  }
-  pre {
-      text-align: center;
-      font-family:arial;
-      line-height: 1.5;
-      margin-right:auto;
-      margin-left:auto;
-  }
+    padding-left: 5px;
+    font-size: 40px;
+    text-shadow: 2px 2px #141414;
+}
+
+.name {
+    text-align: center;
+    padding-top: 40px;
+}
+
+.hr {
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+h4 {
+    font-family: Arial;
+    text-align: center;
+    line-height: 1.5;
+    font-size: 14px;
+}
+
+pre {
+    text-align: center;
+    font-family: arial;
+    line-height: 1.5;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 /*Content Style*/
 .parallax {
     background-image: url("image.jpg");
-    min-height: 300px; 
+    min-height: 300px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
+}
+
 * {
     box-sizing: border-box;
-  }
-  #projects {
-    text-align:center;
-    font-family:arial;
-    text-decoration:none;
-  }
-  #gameLinks:hover {
-      text-decoration:none;
-  }
-  .images {
-      max-width: 100%;
-      height:auto;
-  }
- .glyphicon {
-     font-size: 20px;
- }
- .aboutMe {
-     text-align:center;
-     margin-right:auto;
-     margin-left:auto;
-     max-width:700px;
- }
- h5 {
-     line-height:1.5;
- }
- .head {
-     height:200px;
- }
- #image {
-        -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-        filter: grayscale(100%);
-      }
-  /*My Skills*/
-  .contact {
-      text-align:center;
-      padding-bottom:75px;
-  }
-  .buttonPDF {
-      text-align:center;
-      padding-bottom:75px;
-      padding-top:50px;
-  }
-  .c3 {
-      margin-right:auto;
-      margin-left:auto;
-      text-align:center;
-  }
-  .resume {
-      background-color:#01feec;
-      color:white;
-      width:25%;
-      font-size:20px;
-      padding:20px;
-      margin-bottom:40px;
-      text-shadow: 2px 2px #141414;
-      border:2px solid #141414;
-  }
-  .resume:hover {
-      text-decoration:none;
-      color:#b3b3b3;
-  }
-  .w3-color {
-      background-color:#01feec;
-  }
-  .contain {
-      max-width:100%;
-      padding-left:20px;
-      padding-right:20px;
-  }
-  h3 {
-      text-align:center;
-  }
+}
+
+#projects {
+    text-align: center;
+    font-family: arial;
+    text-decoration: none;
+}
+
+#gameLinks:hover {
+    text-decoration: none;
+}
+
+.images {
+    max-width: 100%;
+    height: auto;
+}
+
+.glyphicon {
+    font-size: 20px;
+}
+
+.aboutMe {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 700px;
+}
+
+h5 {
+    line-height: 1.5;
+}
+
+.head {
+    height: 200px;
+}
+
+#image {
+    -webkit-filter: grayscale(100%);
+    /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
+}
+
+/*My Skills*/
+.contact {
+    text-align: center;
+    padding-bottom: 75px;
+}
+
+.buttonPDF {
+    text-align: center;
+    padding-bottom: 75px;
+    padding-top: 50px;
+}
+
+.c3 {
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
+
+.resume {
+    background-color: #01feec;
+    color: white;
+    width: 25%;
+    font-size: 20px;
+    padding: 20px;
+    margin-bottom: 40px;
+    text-shadow: 2px 2px #141414;
+    border: 2px solid #141414;
+}
+
+.resume:hover {
+    text-decoration: none;
+    color: #b3b3b3;
+}
+
+.w3-color {
+    background-color: #01feec;
+}
+
+.contain {
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+h3 {
+    text-align: center;
+}
 
 /*Footer Style*/
 .footer {
-    padding-top:20px;
-    background-color:#141414;
-    max-width:100%;
-    height:200px;
-    bottom:0;
-    letter-spacing:1.5px;
+    padding-top: 20px;
+    background-color: #141414;
+    max-width: 100%;
+    height: 200px;
+    bottom: 0;
+    letter-spacing: 1.5px;
 }
 
 .nameTitle {
-    color:white;
+    color: white;
     font-family: calibri;
-    text-align:center;
-    font-size:20px;
+    text-align: center;
+    font-size: 20px;
 }
+
 .socialMedia {
-    color:white;
-    text-align:center;
-    text-decoration:none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
 }
+
 .btmLinks {
-    font-size:20px;
-    font-family:calibri;
+    font-size: 20px;
+    font-family: calibri;
     border-right: 2px solid white;
-    padding:5px;
+    padding: 5px;
 }
+
 .btmLink {
-    font-size:20px;
-    font-family:calibri;
+    font-size: 20px;
+    font-family: calibri;
 }
+
 .btmLink:hover {
-    text-decoration:none;
-    color:#b3b3b3;
+    text-decoration: none;
+    color: #b3b3b3;
 }
+
 .btmLinks:hover {
-    text-decoration:none;
-    color:#b3b3b3;
+    text-decoration: none;
+    color: #b3b3b3;
 }
+
 .fa {
-    color:white;
+    color: white;
 }
 
 .contactInfo {
-    text-align:center;
-    font-family:calibri;
-    font-size:20px;
-    color:white;
+    text-align: center;
+    font-family: calibri;
+    font-size: 20px;
+    color: white;
 }
-.fa-github{ 
-    padding:5px;
-    font-size:30px !important;
-    padding-top:30px;
+
+.fa-github {
+    padding: 5px;
+    font-size: 30px !important;
+    padding-top: 30px;
 }
-.fa-github:hover{
-    text-decoration:none;
-    color:#b3b3b3;
+
+.fa-github:hover {
+    text-decoration: none;
+    color: #b3b3b3;
 }
-.fa-linkedin{ 
-    padding:5px;
-    font-size:30px !important;
-    padding-top:30px;
+
+.fa-linkedin {
+    padding: 5px;
+    font-size: 30px !important;
+    padding-top: 30px;
 }
-.fa-linkedin:hover{
-    text-decoration:none;
-    color:#b3b3b3;
+
+.fa-linkedin:hover {
+    text-decoration: none;
+    color: #b3b3b3;
 }
+
 .fa-facebook:hover {
-    text-decoration:none;
-    color:#b3b3b3;
+    text-decoration: none;
+    color: #b3b3b3;
 }
-.fa-facebook{
-    padding:5px;
-    font-size:30px !important;
-    padding-top:30px;
+
+.fa-facebook {
+    padding: 5px;
+    font-size: 30px !important;
+    padding-top: 30px;
 }
-.fa-linkedin:hover{
-    color:#b3b3b3;
+
+.fa-linkedin:hover {
+    color: #b3b3b3;
 }
-.fa-facebook:hover{
-    color:#b3b3b3;
+
+.fa-facebook:hover {
+    color: #b3b3b3;
 }
 
 
@@ -278,25 +327,29 @@ header {
         text-align: center;
     }
 }
-  /* Responsive layout - */
- 
-  @media (max-width:600px){
-      .contactInfo {
-          font-size:12px;
-      }
-  }
-  @media (max-width:600px) {
-      .btmLinks {
-          font-size:12px;
-      }
-  }
-  @media (max-width:600px) {
-    .btmLink {  
-    font-size: 12px;
-  }
+
+/* Responsive layout - */
+
+@media (max-width:600px) {
+    .contactInfo {
+        font-size: 12px;
+    }
 }
+
+@media (max-width:600px) {
+    .btmLinks {
+        font-size: 12px;
+    }
+}
+
+@media (max-width:600px) {
+    .btmLink {
+        font-size: 12px;
+    }
+}
+
 @media (max-width:600px) {
     .nameTitle {
-        font-size:12px;
+        font-size: 12px;
     }
 }
