--- a/main.css
+++ b/main.css
@@ -167,6 +167,9 @@ h5 {
     -webkit-filter: grayscale(100%);
     /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
+    box-shadow: 0px 0px 1px 1px;
+    max-width:100%;
+    margin-bottom:50px;
 }
 
 /*My Skills*/
