--- a/main.css
+++ b/main.css
@@ -92,6 +92,12 @@ header h2 {
     text-shadow: 2px 2px #141414;
     
 }
+.img1 {
+    position: absolute;
+    top:60%;
+    left:80%;
+    transform: translate(-50%, -50%);
+}
 
 .name{
     position: absolute;
@@ -110,11 +116,6 @@ h4 {
     font-family: Arial;
     line-height: 1.5;
     font-size: 14px;
-    position: absolute;
-    top:35%;
-    left:50%;
-    transform: translate(-50%, -50%);
-    width:75%;
 }
 
 pre {
@@ -336,26 +337,24 @@ h3 {
 
 
 /*media queries*/
-@media (max-width:550px) {
-    .h4 {
-        display:none;
+@media (max-width:600px) {
+    header {
+        height:auto;
     }
 }
-@media (max-width:950px) {
+
+
+@media (max-width:975px) {
     .name {
-        top:50%;
+        top:10%;
     }
 }
-@media (max-width:950px) {
+@media (max-width:975px) {
     .header h2 {
-        top:50%;
+        top:25%;
     }
 }
-@media (max-width:950px) {
-    .h4 {
-        top:50%;
-    }
-}
+
 @media (min-width: 768px) {
     .navbar .navbar-nav {
         display: inline-block;
