--- a/main.css
+++ b/main.css
@@ -63,6 +63,11 @@ li:hover {
 }
 
 /*header style*/
+#animate {
+    position:relative;
+    width:100px;
+    height:100px;
+}
 header {
     position: relative;
     height: 500px;
