--- a/main.css
+++ b/main.css
@@ -63,13 +63,22 @@ li:hover {
 }
 
 /*header style*/
-#animate {
+#jellyFish {
+    height:auto;
+    max-width:150px;
     position:relative;
     position: absolute;
     top:60%;
     left:10%;
     transform: translate(-50%, -50%);
 }
+/*#animate {
+    position:relative;
+    position: absolute;
+    top:60%;
+    left:10%;
+    transform: translate(-50%, -50%);
+}*/
 header {
     position: relative;
     height: 500px;
