--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ li:hover {
 }
 #animate {
     position:absolute;
-    top:60%;
+    top:45%;
     left:10%;
     transform: translate(-50%, -50%);
 }
@@ -356,6 +356,11 @@ h3 {
 
 
 /*media queries*/
+@media (max-width:1000px) {
+    #animate{
+        display:none;
+    }
+}
 @media (max-width:600px) {
     header {
         height:auto;
