--- a/main.css
+++ b/main.css
@@ -209,9 +209,8 @@ h5 {
 }
 
 #image {
-    -webkit-filter: grayscale(100%);
-    /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+    border-radius:50%;
+    padding:5px;
     box-shadow: 0px 0px 1px 1px;
     max-width:100%;
     margin-bottom:50px;
