--- a/main.css
+++ b/main.css
@@ -113,6 +113,17 @@ h2 {
     top:50%;
     left:90%;
     transform: translate(-50%, -50%);
+    height:100px;
+    width:auto;
+}
+#img0 {
+    position: absolute;
+    top:50%;
+    left:80%;
+    transform: translate(-50%, -50%);
+    height:100px;
+    width:auto;
+    text-decoration:none;
 }
 
 .name1 {
@@ -151,7 +162,7 @@ pre {
     display:block;
     width: 6em;
     max-width:70%;
-    border-bottom: 0.3em solid #F3C577;
+    border-bottom: 0.3em solid #0d9fea;
     padding-top:5px;
 }
 .container_a {
