--- a/main.css
+++ b/main.css
@@ -166,6 +166,16 @@ pre {
 }
 
 /*Content Style*/
+.container {
+    padding-top:60px;
+    padding-bottom:30px;
+}
+.container1 {
+    padding-top:30px;
+    padding-bottom:30px;
+    background-color:#f5f5f5
+}
+
 #github:after { /* this is the border */
     content:"";
     display:block;
