--- a/main.css
+++ b/main.css
@@ -186,6 +186,7 @@ pre {
     height:470px;
     margin-right:auto;
     margin-left:auto;
+    display:table;
 }
 
 #github:after { /* this is the border */
@@ -413,7 +414,7 @@ h3 {
         text-align:center;
     }
     #github:after {
-        text-align:center;
+        display:none;
     }
     .nameBio {
         text-align:center;
@@ -424,6 +425,9 @@ h3 {
     }
 }
 @media(max-width:850px) {
+    header {
+        height:auto;
+    }
     .container1 {
         height:auto;
     }
