--- a/main.css
+++ b/main.css
@@ -61,8 +61,82 @@ li:hover {
 .navbar-brand:hover {
     color: #b3b3b3 !important;
 }
+/*POPUP...................*/
 
-/*header style*/
+.popup {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+    position: absolute;
+    top:50%;
+    left:10%;
+    transform: translate(-50%, -50%);
+    height:100px;
+    width:auto;
+    }
+  
+  .popup:hover {
+    background-color: #555555;
+    color: white;
+  }
+  .popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* The actual popup */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Toggle this class - hide and show the popup */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+  }
+  
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
+
+
+/*header style......................*/
 #jellyFish {
     height:auto;
     max-width:150px;
