--- a/main.css
+++ b/main.css
@@ -98,17 +98,18 @@ li:hover {
   /* The actual popup */
   .popup .popuptext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
+    width: 250px;
+    background-color: #000000;
     color: #fff;
     text-align: center;
     border-radius: 6px;
     padding: 8px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
-    left: 50%;
+    bottom: 70%;
+    left: 225%;
     margin-left: -80px;
+    background: rgba(198, 198, 198, 0.3);
   }
   
   /* Popup arrow */
@@ -365,6 +366,7 @@ h5 {
 .contact {
     text-align: center;
     padding-bottom: 75px;
+    padding-top:75px;
 }
 
 .buttonPDF {
