--- a/main.css
+++ b/main.css
@@ -286,7 +286,7 @@ ul.skillList {
 }
 .container01 {
     max-width:1000px;
-    height:300px;
+    height:350px;
     margin-right:auto;
     margin-left:auto;
    margin-bottom:30px;
@@ -367,6 +367,8 @@ h5 {
     border-top: 5px solid #0d9fea;
     width:100px;
     padding-bottom:60px;
+    margin-left:auto;
+    margin-right:auto;
 }
 .hr02 {
     border-top: 5px solid #0d9fea;
@@ -556,6 +558,10 @@ h3 {
     }
 }
 @media (max-width:992px) {
+    .hr02 {
+        margin-right:auto;
+        margin-left:auto;
+    }
     ul.skillList {
         padding-top:20px;
     }
